--- a/Public/App/YearX/styles/particles.css
+++ b/Public/App/YearX/styles/particles.css
@@ -3,4 +3,6 @@
   width: 100%;
   position: absolute;
   z-index: -1;
+  top: 0;
+  left: 0;
 }
